# image_translator

./: .gitignore  AGENTS.md  pyproject.toml
.agents/skills/harness-review/: SKILL.md
.agents/skills/harness-validation/: SKILL.md
.agents/skills/harness-workflow/: SKILL.md
.codex/: config.toml
.codex/hooks/: command_policy.py  git_pre_commit.py  pre_commit_validation.py  project_validation.py  stop_validation.py
.githooks/: pre-commit
.harness/: validation.json
docs/: ADR.md  ARCHITECTURE.md  DOMAIN_MODEL.md  EXPORT.md  INDEX.md  OCR_LAYOUT.md  PRD.md  PROJECT_CONTEXT.md  PROMPT_CONTRACTS.md  PROVIDERS.md  QUALITY.md  RELEASE.md  SECURITY_PRIVACY.md  TESTING.md  UI_GUIDE.md  WORKFLOWS.md
phases/: index.json
phases/0-core-vertical-slice/: index.json  step0-output.json  step0.md  step1-output.json  step1.md  step2-output.json  step2.md  step3-output.json  step3.md  step4-output.json  step4.md
phases/1-image-layout-rendering/: index.json  step0-output.json  step0.md  step1-output.json  step1.md  step2-output.json  step2.md  step3-output.json  step3.md  step4-output.json  step4.md
phases/2-workflow-provider-runtime/: index.json  step0-output.json  step0.md  step1-output.json  step1.md  step2-output.json  step2.md  step3-output.json  step3.md  step4-output.json  step4.md
phases/3-gui-export-release/: index.json  step0-output.json  step0.md  step1-output.json  step1.md  step2-output.json  step2.md  step3-output.json  step3.md  step4-output.json  step4.md
phases/4-real-provider-adapters/: index.json  step0.md  step1.md  step2.md  step3.md  step4.md  step5.md
scripts/: configure_harness.py  harness_validation.py  run_gui_tests.py  security_release_scan.py  test_codex_hooks.py  validate_project.py
src/image_translator/: __init__.py
src/image_translator/app/: __init__.py  main.py
src/image_translator/config/: __init__.py  resources.py  settings.py
src/image_translator/domain/: __init__.py  _base.py  ids.py  (+10 more)
tests/: conftest.py
tests/gui/: test_main_window.py  test_review_revision_ui.py  test_settings_export_ui.py  test_worker_progress.py
tests/integration/: test_export_gate_and_save.py  test_installed_resource_paths.py  test_mock_core_workflow.py  test_mock_mvp_workflow.py  test_result_quality_graph_mock.py  test_resume_mock_workflow.py  test_security_release_scan.py  test_translation_quality_graph_mock.py
tests/unit/: test_architecture_boundaries.py  test_bootstrap_contract.py  test_guardrail_contracts.py
(+74 files in other folders)
