[project]
name = "image-translator"
version = "0.1.0"
description = "Quality-first manga and webtoon image translation desktop app."
readme = "docs/PRD.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "langgraph",
    "pillow>=12.2.0",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_translator"]

[tool.pytest.ini_options]
testpaths = ["scripts", "tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
".codex/hooks/git_pre_commit.py" = ["E402"]
".codex/hooks/pre_commit_validation.py" = ["E402"]
".codex/hooks/project_validation.py" = ["E402"]
".codex/hooks/stop_validation.py" = ["E402"]
"scripts/configure_harness.py" = ["E402"]
"scripts/validate_project.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
